[package]
name = "tui-mines"
description = "A terminal-based Minesweeper game built with Rust and Ratatui."
authors = ["gushiii <zrjie001@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
